--- a/style.css
+++ b/style.css
@@ -648,12 +648,12 @@ body, h1, h2, h3, h4, h5, h6, p, ul, li {
   .content__description {
     padding: 0;
     margin: 0;
-    line-height: 2;
+    line-height: 1.8;
     font-size: 24px;
   }
 
   .content__resume {
-    margin: 65px 0;
+    margin: 60px 0;
     text-align: center;
   }
 
@@ -666,7 +666,28 @@ body, h1, h2, h3, h4, h5, h6, p, ul, li {
   .content__photo-main {
     width: 25rem;
   }
+  /*page-2*/
+  .career {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .career__title {
+    margin-bottom: 40px;
+    font-size: 50px;
+    padding: 0;
+    text-align: center;
+  }
+
+  .career-info {
+    width: 500px;
+    height: 125px;
+    font-size: 20px
+  }
 }
+
 
 
 
